# Pytdl

./: .cache  .replit  .txt  MANIFEST.in  README.md  main.py  package-lock.json  pyproject.toml  setup.py  tesst.json  test.json
NPytdl/: __init__.py  crawler.py  dataParser.py
NPytdl.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
Pytdl.egg-info/: PKG-INFO  SOURCES.txt
