[build-system]
build-backend = "poetry.masonry.api"
requires = ["poetry>=0.12"]

[tool]
[tool.poetry]
authors = ["bloodnight <rexwu9204@gmail.com>"]
description = ""
name = "Pytdl"
version = "0.1.2"
[tool.poetry.dependencies]
aiohttp = "^3.7.2"
bs4 = "^0.0.1"
pafy = "^0.5.5"
python = "^3.8"
youtube_dl = "^2020.11.12"
[tool.poetry.dev-dependencies]
