[tool.poetry]
name = "pytdl"
version = "0.1.0"
description = ""
authors = ["repl.it user <replituser@example.com>"]

[tool.poetry.dependencies]
python = "^3.8"
aiohttp = "^3.7.3"
youtube_dl = "^2021.1.8"
idna = "^2.5"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12", "idna<3,>=2.5"]
build-backend = "poetry.masonry.api"
